Add router and db connection

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,17 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+# Ethereum library
 ethers = { version = "2.0", features = ["rustls"] }
+# A runtime for writing asynchronous applications
 tokio = { version = "1.35", features = ["full"] }
+# A generic serialization/deserialization framework
 serde = { version = "1.0", features = ["derive"] }
+# loads environment variables from a .env file
 dotenv = "0.15.0"
+# The Rust SQL Toolkit
 sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres"] }
+# provides a trait object based error type for error handling
+anyhow = "1.0.79"
+# web application framework
+axum = "0.7.3"
