Add GET request handlers

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,5 @@ sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres"] }
 anyhow = "1.0.79"
 # web application framework
 axum = "0.7.3"
+#jsonapi serializer
+jsonapi = "0.7.0"
