Add db migration, evm connection and balance load from evm

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
-RPC_URL = "https://eth.llamarpc.com"
+# RPC_URL = "https://eth.llamarpc.com"
+RPC_URL_HTTP = "https://mainnet.infura.io/v3/16c53453292f4d53b50a93c18f7a444f"
+RPC_URL_WS = "wss://mainnet.infura.io/ws/v3/16c53453292f4d53b50a93c18f7a444f"
 DATABASE_URL = "postgres://postgres:p05t6re5@localhost/th_db"
+SERVICE_IP = "127.0.0.1"
+SERVICE_PORT = "8080"
